--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "primus": "^7.3.3",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
